--- a/view/mail/email-verify.handlebars
+++ b/view/mail/email-verify.handlebars
@@ -6,10 +6,12 @@
   <title>Welcome Email</title>
 </head>
 <body>
-  <h2> {{firstName}} 😎, Thanks for signup!</h2>
+<h2> {{firstName}} 😎, Thanks for signup!</h2>
+
 <h4> Now, Time for verifying your mail🔑 ....</h4>
-<h4>Tap Here 👉  <a href="http://{{host}}/verify-guest/verify-mail?token={{emailToken}}">Verify🚀</a>
+<h4>Tap Here 👉  <a href="http://{{host}}/guest/verify-mail?token={{emailToken}}">Verify🚀</a>
 <h5> Thank You 😁 </h5>
 <p> Note📝‼ You Have 5 Days to Verify it Either Your Account Will be Suspended 🚮 </p>
+
 </body>
 </html>
